[gd_scene load_steps=12 format=3 uid="uid://dmv2h708cqd7y"]

[ext_resource type="Script" path="res://stuff/puzzle.gd" id="1_8scty"]
[ext_resource type="Texture2D" uid="uid://coj830sxmmcqn" path="res://assets/items/steinbeck/hand.png" id="3_20h8w"]
[ext_resource type="Texture2D" uid="uid://byw67xeybt2ua" path="res://assets/items/steinbeck/flag.png" id="3_81gyn"]
[ext_resource type="Texture2D" uid="uid://bur305l0lvnrc" path="res://assets/items/steinbeck/music.png" id="4_23o1n"]
[ext_resource type="Texture2D" uid="uid://vutkdv16dwj1" path="res://assets/items/steinbeck/inf.png" id="5_ruom8"]
[ext_resource type="Texture2D" uid="uid://c745cpgwmr2ig" path="res://assets/items/steinbeck/eye.png" id="6_3bywx"]
[ext_resource type="Texture2D" uid="uid://dn4nn1oq87oku" path="res://assets/items/steinbeck/nuke.png" id="7_8r7iq"]
[ext_resource type="Texture2D" uid="uid://vwo15otxdy73" path="res://assets/items/steinbeck/buttrt.png" id="7_j43n0"]
[ext_resource type="Texture2D" uid="uid://n2lx7y7sw42y" path="res://assets/items/steinbeck/time.png" id="8_auxie"]
[ext_resource type="Texture2D" uid="uid://cmsajpsg5rwn8" path="res://assets/items/steinbeck/flowa.png" id="8_d0yqc"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5yfs1"]
bg_color = Color(0, 0.717647, 0.352941, 1)

[node name="MarginContainer" type="MarginContainer"]
scale = Vector2(2, 2)
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_8scty")

[node name="NinePatchRect" type="Panel" parent="."]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="GridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/h_separation = 5
theme_override_constants/v_separation = 5
columns = 3

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_styles/pressed = SubResource("StyleBoxFlat_5yfs1")
toggle_mode = true
icon = ExtResource("7_j43n0")
icon_alignment = 1

[node name="Button2" type="Button" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_styles/pressed = SubResource("StyleBoxFlat_5yfs1")
toggle_mode = true
icon = ExtResource("3_81gyn")
icon_alignment = 1

[node name="Button3" type="Button" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_styles/pressed = SubResource("StyleBoxFlat_5yfs1")
toggle_mode = true
icon = ExtResource("8_auxie")
icon_alignment = 1

[node name="Button4" type="Button" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_styles/pressed = SubResource("StyleBoxFlat_5yfs1")
toggle_mode = true
icon = ExtResource("6_3bywx")
icon_alignment = 1

[node name="Button5" type="Button" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_styles/pressed = SubResource("StyleBoxFlat_5yfs1")
toggle_mode = true
icon = ExtResource("5_ruom8")
icon_alignment = 1

[node name="Button6" type="Button" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_styles/pressed = SubResource("StyleBoxFlat_5yfs1")
toggle_mode = true
icon = ExtResource("7_8r7iq")
icon_alignment = 1

[node name="Button7" type="Button" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_styles/pressed = SubResource("StyleBoxFlat_5yfs1")
toggle_mode = true
icon = ExtResource("8_d0yqc")
icon_alignment = 1

[node name="Button8" type="Button" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_styles/pressed = SubResource("StyleBoxFlat_5yfs1")
toggle_mode = true
icon = ExtResource("4_23o1n")
icon_alignment = 1

[node name="Button9" type="Button" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_styles/pressed = SubResource("StyleBoxFlat_5yfs1")
toggle_mode = true
icon = ExtResource("3_20h8w")
icon_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Exit"
expand_icon = true

[node name="Button2" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Enter"
expand_icon = true

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Button" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Button2" to="." method="_on_enter_pressed"]
